docs: documentation for update opportunity
